--- a/FrameBounds/FrameBounds/Base.lproj/Main.storyboard
+++ b/FrameBounds/FrameBounds/Base.lproj/Main.storyboard
@@ -19,8 +19,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Ql-C0-Btt">
                                 <rect key="frame" x="107" y="20" width="200" height="200"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rMV-Ry-21j">
-                                        <rect key="frame" x="20" y="100" width="100" height="100"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rMV-Ry-21j">
+                                        <rect key="frame" x="20" y="20" width="100" height="100"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vSm-1k-BVO">
                                                 <rect key="frame" x="20" y="20" width="30" height="30"/>
@@ -30,13 +30,21 @@
                                                     <constraint firstAttribute="height" constant="30" id="Wjn-8A-DwL"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lhr-Sp-mQT">
+                                                <rect key="frame" x="10" y="10" width="80" height="80"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                         <constraints>
                                             <constraint firstItem="vSm-1k-BVO" firstAttribute="leading" secondItem="rMV-Ry-21j" secondAttribute="leading" constant="20" id="8eh-hy-Xdu"/>
+                                            <constraint firstItem="lhr-Sp-mQT" firstAttribute="top" secondItem="rMV-Ry-21j" secondAttribute="top" constant="10" id="9OD-tU-UFy"/>
                                             <constraint firstAttribute="width" constant="100" id="FUa-CF-ed9"/>
+                                            <constraint firstAttribute="bottom" secondItem="lhr-Sp-mQT" secondAttribute="bottom" constant="10" id="RmN-Yi-lJa"/>
                                             <constraint firstItem="vSm-1k-BVO" firstAttribute="top" secondItem="rMV-Ry-21j" secondAttribute="top" constant="20" id="a8C-4c-1hN"/>
                                             <constraint firstAttribute="height" constant="100" id="fXm-Am-sRG"/>
+                                            <constraint firstAttribute="trailing" secondItem="lhr-Sp-mQT" secondAttribute="trailing" constant="10" id="hwn-3X-8IP"/>
+                                            <constraint firstItem="lhr-Sp-mQT" firstAttribute="leading" secondItem="rMV-Ry-21j" secondAttribute="leading" constant="10" id="qSQ-yo-Yxq"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -60,11 +68,12 @@
                     <connections>
                         <outlet property="view1" destination="8Ql-C0-Btt" id="tB6-oA-lQG"/>
                         <outlet property="view2" destination="rMV-Ry-21j" id="CAg-Pi-vZV"/>
+                        <outlet property="view3" destination="lhr-Sp-mQT" id="r7Y-uh-hY3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oCc-aq-Tkt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="122" y="129"/>
+            <point key="canvasLocation" x="-90" y="227"/>
         </scene>
     </scenes>
     <resources>
